@@ -1,4 +1,10 @@
-https://marcosraoi.github.io/jogos.html
+# https://marcosraoi.github.io/jogos
 
-# marcosraoi.github.io
- Portfolio
+marcosraoi.github.io
+# Portfolio of Marcos "Raoi" Cavalcante
+ 
+ Follow me in my social medias:
+ - Facebook: https://www.facebook.com/markinhos.cf/
+ - Instagram: https://www.instagram.com/marcosraoi/
+ - LinkedIn: https://www.linkedin.com/in/marcos-cavalcante-de-freitas-8bb55a120/
+ - GitHub: https://www.github.com/MarcosRaoi/
