@@ -10,7 +10,7 @@ class ContactSocialNetwork extends React.Component {
     getSocialNetworkLink(keyId) {
         switch (keyId) {
             case SOCIAL_NETWORKS.Facebook:
-                return "https://www.facebook.com/markinhos.cf"
+                return "https://www.facebook.com/markinhos.cf/"
             
             case SOCIAL_NETWORKS.Instagram:
                 return "https://www.instagram.com/marcosraoi/"
